[project]
name = "bpmn_print"
version = "0.4.0"
description = "Print BPMN workflow for developer readings"
authors = [
    {name = "Siak Hooi",email = "siakhooi@gmail.com"}
]
keywords = [ "kafka" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities"
]

license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "lxml (>=6.0.2,<7.0.0)",
    "reportlab (>=4.4.5,<5.0.0)",
    "graphviz (>=0.21,<0.22)",
    "pillow (>=11.0.0,<12.0.0)"
]

[project.urls]
homepage = "https://github.com/siakhooi/bpmn-print"
repository = "https://github.com/siakhooi/bpmn-print"
documentation = "https://github.com/siakhooi/bpmn-print/wiki"
"Bug Tracker" = "https://github.com/siakhooi/bpmn-print/issues"

[project.scripts]
bpmn-print = 'bpmn_print.cli:run'


[tool.poetry]
packages = [{include = "bpmn_print", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
flake8 = "^7.2.0"
pytest-mock = "^3.15.1"
black = "^24.0.0"

[tool.black]
line-length = 79
target-version = ["py310"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
